dist/media/Ingress.checkrr.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  labels:
    app.kubernetes.io/instance: media
    app.kubernetes.io/name: checkrr
  name: checkrr
  namespace: media
spec:
  rules:
    - host: checkrr.cmdcentral.xyz
      http:
        paths:
          - backend:
              service:
                name: checkrr
                port:
                  number: 8585
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - checkrr.cmdcentral.xyz
      secretName: checkrr-tls
